--- a/src/main/java/UI/GioiThieuD.form
+++ b/src/main/java/UI/GioiThieuD.form
@@ -55,6 +55,11 @@
   </Layout>
   <SubComponents>
     <Component class="javax.swing.JLabel" name="lblLogo">
+      <Properties>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/Icon/poly.png"/>
+        </Property>
+      </Properties>
     </Component>
     <Container class="javax.swing.JScrollPane" name="jScrollPane1">
       <AuxValues>
